--- a/src/styles/_section-community-partners.sass
+++ b/src/styles/_section-community-partners.sass
@@ -312,3 +312,6 @@
 #au21
   background: url('../images/partnerLogo/au21.svg') 100% no-repeat
   background-size: cover
+#kucoin
+  background: url('../images/partnerLogo/kucoin.svg') 100% no-repeat
+  background-size: cover
