--- a/src/html/pages/home/community-partners.hbs
+++ b/src/html/pages/home/community-partners.hbs
@@ -174,6 +174,19 @@
             </div>
           </a>
         </div>
+        <div class="col-md-6 col-sm-6 btm-space">
+          <a href="https://www.kucoin.com/" target="_blank">
+            <div class="partner-box typo-syne-h5">
+              <span class="partner-logos" id="kucoin"></span>
+              <div class="partner-desc">
+                <p class="partner-name">Kucoin</p>
+                <p class="partner-text">
+                  A global cryptocurrency exchange for numerous digital assets and cryptocurrencies.
+                </p>
+              </div>
+            </div>
+          </a>
+        </div>
       </div>
 
 		</div>
